// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteImage should render ipfs sources 1`] = `
<Image
  onError={[Function]}
  source={
    Object {
      "uri": "ipfs://QmeE94srcYV9WwJb1p42eM4zncdLUai2N9zmMxxukoEQ23",
    }
  }
/>
`;

exports[`RemoteImage should render static sources 1`] = `
<Image
  onError={[Function]}
  source={
    Object {
      "uri": "https://s3.amazonaws.com/airswap-token-images/OXT.png",
    }
  }
/>
`;

exports[`RemoteImage should render svg correctly 1`] = `
<ComponentErrorBoundary
  componentLabel="RemoteImage-SVG"
>
  <View
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <SvgUri
      height="100%"
      source={
        Object {
          "uri": "https://raw.githubusercontent.com/MetaMask/contract-metadata/master/images/dai.svg",
        }
      }
      uri="https://raw.githubusercontent.com/MetaMask/contract-metadata/master/images/dai.svg"
      width="100%"
    />
  </View>
</ComponentErrorBoundary>
`;
